--- a/jano/package.json
+++ b/jano/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "npm run prepare && next build"
+    "vercel-build": "npm run prepare && next build",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "next": "^13.5.4",
