--- a/jano/package.json
+++ b/jano/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "vercel-build": "npm run prepare && next build",
-    "prepare": "npm run build"
+    "prepare": "ncho 'no prepare script needed' "
   },
   "dependencies": {
     "next": "^13.5.4",
